fix(tooltip): Fix tooltip bg to match the accent theme and improve readability

--- a/src/sass/abstract/_vars-gpt.scss
+++ b/src/sass/abstract/_vars-gpt.scss
@@ -42,6 +42,8 @@ html,
     --bg-elevated-secondary: var(--c-surface-3) !important;
     --bg-status-warning: #{color-alpha(--c-warning, 0.2, true)};
     --bg-status-error: #{color-alpha(--c-danger, 0.2, true)};
+
+    --bg-tooltip: color-mix(var(--c-accent) 10%, var(--c-surface-2)) !important;
     /* .border-token-border-default
 	- border oko "Uprade" btn-a
 	- border oko inputa u GPTs page
