--- a/src/sass/elements/_tooltips.scss
+++ b/src/sass/elements/_tooltips.scss
@@ -1,41 +1,45 @@
-/* === TOOLTIPS arrow div bg color === 
-	- Classic tooltips
-	- Tooltip with searched links in GPT chat bubble
-	- Tooltip when hover on "Attach Files" button in prompt textarea
-	- Tooltip when hover on ❌ in attached images in prompt textarea
-	- Card Tooltip when hover on attached source links for Projects > Sources
-	- Card Tooltip when hover on Map links
-*/
-div[data-radix-popper-content-wrapper] {
+// /* === TOOLTIPS arrow div bg color === 
+// 	- Classic tooltips
+// 	- Tooltip with searched links in GPT chat bubble
+// 	- Tooltip when hover on "Attach Files" button in prompt textarea
+// 	- Tooltip when hover on ❌ in attached images in prompt textarea
+// 	- Card Tooltip when hover on attached source links for Projects > Sources
+// 	- Card Tooltip when hover on Map links
+// */
+// div[data-radix-popper-content-wrapper] {
 
-	// This not take affect on tooltip when hover attached file in chats. Ive add .rounded-xl.border-token-border-default to not affect the chat pill link card tooltip when hover pill link in chats
-	// div[style*='--radix-tooltip-content'].select-none.max-w-xs.rounded-lg {
+// 	// This not take affect on tooltip when hover attached file in chats. Ive add .rounded-xl.border-token-border-default to not affect the chat pill link card tooltip when hover pill link in chats
+// 	// div[style*='--radix-tooltip-content'].select-none.max-w-xs.rounded-lg {
 
-	/* TOOLTIP
-	relative z-50 transition-opacity select-none overflow-hidden dark bg-black rounded-lg max-w-xs px-2 py-1 
-	*/
-	/* MAP CARD WHEN HOVER PIN IN MAPS
-	relative z-50 transition-opacity select-none overflow-hidden dark bg-black rounded-xl max-w-sm p-0 animate-show
+// 	/* TOOLTIP
+// 	relative z-50 transition-opacity select-none overflow-hidden dark bg-black rounded-lg max-w-xs px-2 py-1 
+// 	*/
+// 	/* MAP CARD WHEN HOVER PIN IN MAPS
+// 	relative z-50 transition-opacity select-none overflow-hidden dark bg-black rounded-xl max-w-sm p-0 animate-show
 
-	// TOOLTIP CARD WHEN HOVER DOTTED SOURCE LINKS IN CHATS
-	relative z-50 transition-opacity select-none bg-clip-padding rounded-xl overflow-hidden border-token-border-default border dark bg-black max-w-sm dark: bg-token-main-surface-secondary
-	*/
-	// div[style*='--radix-tooltip-content'][class*="bg-black"]:not(.rounded-xl.border-token-border-default, .p-0) {
-	div[style*='--radix-tooltip-content'][class*="bg-black"]:not(.p-0) {
-		background-color: color-mix(var(--c-accent) 10%, var(--c-surface-2)) !important;
+// 	// TOOLTIP CARD WHEN HOVER DOTTED SOURCE LINKS IN CHATS
+// 	relative z-50 transition-opacity select-none bg-clip-padding rounded-xl overflow-hidden border-token-border-default border dark bg-black max-w-sm dark: bg-token-main-surface-secondary
+// 	*/
+// 	// div[style*='--radix-tooltip-content'][class*="bg-black"]:not(.rounded-xl.border-token-border-default, .p-0) {
+// 	div[style*='--radix-tooltip-content'][class*="bg-black"]:not(.p-0) {
+// 		background-color: color-mix(var(--c-accent) 10%, var(--c-surface-2)) !important;
 
-		// &,
-		// .text-white,
-		// .text-token-text-primary,
-		// .text-token-text-tertiary,
-		// .text-gray-400 {
-		// 	color: var(--c-on-accent) !important;
-		// }
+// 		// &,
+// 		// .text-white,
+// 		// .text-token-text-primary,
+// 		// .text-token-text-tertiary,
+// 		// .text-gray-400 {
+// 		// 	color: var(--c-on-accent) !important;
+// 		// }
 
-		// /* "Ctrl + K" etc */
-		.text-token-text-tertiary,
-		.text-gray-400 {
-			opacity: 0.75;
-		}
-	}
+// 		// /* "Ctrl + K" etc */
+// 		.text-token-text-tertiary,
+// 		.text-gray-400 {
+// 			opacity: 0.75;
+// 		}
+// 	}
+// }
+
+.bg-token-bg-tooltip {
+	box-shadow: 0 0 0 1px var(--c-accent-20);
 }
